# CaliNE

./: .env.template  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/commit/: SKILL.md
.claude/skills/security-review/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  daily_sync.yml  keepalive.yml
docs/: requirements.md
scripts/: setup_ms_auth.py
src/: google_calendar.py  line_notify.py  main.py  outlook.py
tests/: test_google_calendar.py  test_line_notify.py  test_outlook.py  test_update_dotenv.py
